Add border to images
Signed-off-by: Peter Hartree <web@peterhartree.co.uk>

--- a/src/.vuepress/theme/styles/index.styl
+++ b/src/.vuepress/theme/styles/index.styl
@@ -77,6 +77,11 @@ body
   img
     max-width 100%
 
+
+{$contentClass}
+  img
+    border: 15px solid #f1f1f1;
+
 a
   font-weight 500
   color $accentColor
