--- a/src/.vuepress/theme/styles/palette.styl
+++ b/src/.vuepress/theme/styles/palette.styl
@@ -1,6 +1,6 @@
 // colors
-$accentColor = #3eaf7c
-$textColor = #2c3e50
+$accentColor = #4399cc
+$textColor = #333333
 $borderColor = #eaecef
 $codeBgColor = #282c34
 $arrowBgColor = #ccc
