Images should not overflow wrapper
Signed-off-by: Peter Hartree <web@peterhartree.co.uk>

--- a/src/.vuepress/theme/styles/index.styl
+++ b/src/.vuepress/theme/styles/index.styl
@@ -80,7 +80,8 @@ body
 
 {$contentClass}
   img
-    border: 15px solid #f1f1f1;
+    border 15px solid #f1f1f1;
+    box-sizing border-box;
 
 a
   font-weight 500
