--- a/src/.vuepress/theme/styles/index.styl
+++ b/src/.vuepress/theme/styles/index.styl
@@ -8,13 +8,14 @@
 html, body
   padding 0
   margin 0
-  background-color #fff
+  background: $backgroundColor
 
 body
-  font-family -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif
-  -webkit-font-smoothing antialiased
-  -moz-osx-font-smoothing grayscale
-  font-size 18px
+  font-family 'Lora', serif
+
+  // -webkit-font-smoothing antialiased
+  // -moz-osx-font-smoothing grayscale
+  font-size 17px
   color $textColor
 
 .page
@@ -27,9 +28,13 @@ body
   left 0
   right 0
   height $navbarHeight
-  background-color #fff
+  background-color $backgroundColor
   box-sizing border-box
-  border-bottom 1px solid $borderColor
+  font-family "IBM Plex Sans", sans-serif
+
+  a
+    text-decoration none
+    border-bottom none
 
 .sidebar-mask
   position fixed
@@ -60,7 +65,9 @@ body
     margin-top $navbarHeight
 
   a:hover
-    text-decoration underline
+    text-decoration none
+    border-bottom-color $accentColor
+    background #fff
 
   p.demo
     padding 1rem 1.5rem
@@ -80,13 +87,14 @@ body
 
 {$contentClass}
   img
-    border 15px solid #f1f1f1;
-    box-sizing border-box;
+    border 5px solid $secondaryAccentColor
+    box-sizing border-box
 
 a
   font-weight 500
   color $accentColor
   text-decoration none
+  border-bottom 1px solid $secondaryAccentColor
 
 p a code
   font-weight 400
@@ -100,7 +108,7 @@ kbd
   padding 0 0.15em
 
 blockquote
-  border-left .2rem solid #dfe2e5
+  border-left 5px solid $secondaryAccentColor
   margin 1rem 0
   padding .25rem 0 .25rem 1rem
 
@@ -129,6 +137,7 @@ strong
 h1, h2, h3, h4, h5, h6
   font-weight 600
   line-height 1.25
+  font-family: 'IBM Plex Sans', sans-serif;
 
   {$contentClass}:not(.custom) > &
     margin-top (0.5rem - $navbarHeight)
@@ -136,7 +145,7 @@ h1, h2, h3, h4, h5, h6
     margin-bottom 0
 
     &:first-child
-      margin-top -1.5rem
+      margin-top 0rem
       margin-bottom 1rem
 
       + p, + pre, + .custom-block
@@ -144,6 +153,7 @@ h1, h2, h3, h4, h5, h6
 
   &:hover .header-anchor
     opacity: 1
+    border none
 
 h1
   font-size 2.2rem
@@ -151,7 +161,7 @@ h1
 h2
   font-size 1.65rem
   padding-bottom .3rem
-  border-bottom 1px solid $borderColor
+  //border-bottom 1px solid $borderColor
 
 h3
   font-size 1.35rem
@@ -205,7 +215,6 @@ th, td
 
     .sidebar
       top 0
-
 
 @media (min-width: ($MQMobile + 1px))
   .theme-container.no-sidebar
