--- a/src/.vuepress/theme/styles/palette.styl
+++ b/src/.vuepress/theme/styles/palette.styl
@@ -1,5 +1,5 @@
 // colors
-$accentColor = #4399cc
+$accentColor = #d9534d
 $textColor = #333333
 $borderColor = #eaecef
 $codeBgColor = #282c34
@@ -7,6 +7,8 @@ $arrowBgColor = #ccc
 $badgeTipColor = #42b983
 $badgeWarningColor = darken(#ffe564, 35%)
 $badgeErrorColor = #DA5961
+$secondaryAccentColor = #d5d5d5
+$backgroundColor = #fff8e7
 
 // layout
 $navbarHeight = 3.6rem
