Adjust text and background colour
Signed-off-by: Peter Hartree <web@peterhartree.co.uk>

--- a/src/.vuepress/theme/styles/palette.styl
+++ b/src/.vuepress/theme/styles/palette.styl
@@ -1,6 +1,6 @@
 // colors
 $accentColor = #d9534d
-$textColor = #333333
+$textColor = #222222
 $borderColor = #eaecef
 $codeBgColor = #282c34
 $arrowBgColor = #ccc
@@ -8,7 +8,7 @@ $badgeTipColor = #42b983
 $badgeWarningColor = darken(#ffe564, 35%)
 $badgeErrorColor = #DA5961
 $secondaryAccentColor = #d5d5d5
-$backgroundColor = #fff8e7
+$backgroundColor = #fffcf4
 
 // layout
 $navbarHeight = 3.6rem
