--- a/src/.vuepress/theme/styles/palette.styl
+++ b/src/.vuepress/theme/styles/palette.styl
@@ -1,5 +1,5 @@
 // colors
-$accentColor = #d9534d
+$accentColor = #e94a45
 $textColor = #222222
 $borderColor = #eaecef
 $codeBgColor = #282c34
@@ -8,7 +8,7 @@ $badgeTipColor = #42b983
 $badgeWarningColor = darken(#ffe564, 35%)
 $badgeErrorColor = #DA5961
 $secondaryAccentColor = #d5d5d5
-$backgroundColor = #fffcf4
+$backgroundColor = #f3f3f3
 
 // layout
 $navbarHeight = 3.6rem
