--- a/src/.vuepress/theme/styles/index.styl
+++ b/src/.vuepress/theme/styles/index.styl
@@ -12,6 +12,7 @@ html, body
 
 body
   font-family 'Lora', serif
+  word-wrap break-word
 
   // -webkit-font-smoothing antialiased
   // -moz-osx-font-smoothing grayscale
@@ -152,8 +153,9 @@ h1, h2, h3, h4, h5, h6
         margin-top 2rem
 
   &:hover .header-anchor
-    opacity: 1
+    opacity 1
     border none
+    background none !important
 
 h1
   font-size 2.2rem
@@ -186,6 +188,9 @@ p, ul, ol
 hr
   border 0
   border-top 1px solid $borderColor
+
+iframe
+  max-width 100%
 
 table
   border-collapse collapse
