Remove external link icons from body content
Signed-off-by: Peter Hartree <web@peterhartree.co.uk>

--- a/src/.vuepress/theme/styles/index.styl
+++ b/src/.vuepress/theme/styles/index.styl
@@ -221,6 +221,10 @@ th, td
     .sidebar
       top 0
 
+.content__default
+  .icon.outbound
+    display none
+
 @media (min-width: ($MQMobile + 1px))
   .theme-container.no-sidebar
     .sidebar
